parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABS
    ACOS
    ACOSD
    ACOSH
    ADD
    ALL
    ANY
    AS
    ASC
    ASIN
    ASIND
    ASINH
    ATAN
    ATAN2
    ATAN2D
    ATAND
    ATANH
    AVG
    BETWEEN
    BY
    CASE
    CBRT
    CEIL
    CEILING
    CEJILLA
    COLUMN
    CONVERT
    COS
    COSD
    COSH
    COT
    COTD
    COUNT
    CURRENT_DATE
    CURRENT_TIME
    DATE_PART
    DECODE
    DEGREES
    DELETE
    DESC
    DISTINCT
    DIV
    D_OR
    ELSE
    ENCODE
    END
    ENUM
    EXCEPT
    EXP
    EXTRACT
    FACTORIAL
    FLOOR
    FOREIGN
    FROM
    FULL
    GCD
    GET_BYTE
    GROUP
    HASHTAG
    HAVING
    IN
    INNER
    INSERT
    INTERSECT
    INTO
    IS
    ISNULL
    JOIN
    LCM
    LEFT
    LENGTH
    LIKE
    LIMIT
    LN
    LOG
    LOG10
    MAX
    MAYMAY
    MD5
    MENMEN
    MIN
    MIN_SCALE
    MOD
    MODULO
    MULTI
    NATURAL
    NOTNULL
    NOW
    OFFSET
    ON
    ONLY
    ORDER
    OUTER
    PI
    POWER
    RADIANS
    RANDOM
    RETURNING
    RIGHT
    ROUND
    SCALE
    SELECT
    SET
    SETSEED
    SET_BYTE
    SHA256
    SIGN
    SIN
    SIND
    SINH
    SOME
    SQRT
    SUBSTR
    SUBSTRING
    SUM
    SYMMETRIC
    S_OR
    TAN
    TAND
    TANH
    THEN
    TRIM
    TRIM_SCALE
    TRUC
    TYPE
    UNION
    UNKNOWN
    UPDATE
    USING
    VALUES
    WHEN
    WHERE
    WIDTH_BUCKET
    Y

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> createDB_insrt
Rule 5     instruccion -> create_Table_isnrt
Rule 6     instruccion -> show_databases_instr
Rule 7     instruccion -> drop_database_instr
Rule 8     instruccion -> use_database_instr
Rule 9     instruccion -> alterDB_insrt
Rule 10    alterDB_insrt -> ALTER DATABASE ID RENAME TO ID PTCOMA
Rule 11    alterDB_insrt -> ALTER DATABASE ID OWNER TO usuariosDB PTCOMA
Rule 12    usuariosDB -> ID
Rule 13    usuariosDB -> CURRENT_USER
Rule 14    usuariosDB -> SESSION_USER
Rule 15    usuariosDB -> CADENA
Rule 16    use_database_instr -> USE ID PTCOMA
Rule 17    drop_database_instr -> DROP DATABASE ID PTCOMA
Rule 18    drop_database_instr -> DROP DATABASE IF EXISTS ID PTCOMA
Rule 19    show_databases_instr -> SHOW DATABASES PTCOMA
Rule 20    createDB_insrt -> CREATE DATABASE ID PTCOMA
Rule 21    createDB_insrt -> CREATE OR REPLACE DATABASE ID PTCOMA
Rule 22    createDB_insrt -> CREATE DATABASE IF NOT EXISTS ID PTCOMA
Rule 23    createDB_insrt -> CREATE OR REPLACE DATABASE IF NOT EXISTS ID PTCOMA
Rule 24    createDB_insrt -> CREATE DATABASE ID createDB_unParam PTCOMA
Rule 25    createDB_insrt -> CREATE OR REPLACE DATABASE ID createDB_unParam PTCOMA
Rule 26    createDB_insrt -> CREATE DATABASE IF NOT EXISTS ID createDB_unParam PTCOMA
Rule 27    createDB_insrt -> CREATE OR REPLACE DATABASE IF NOT EXISTS ID createDB_unParam PTCOMA
Rule 28    createDB_unParam -> OWNER ID
Rule 29    createDB_unParam -> OWNER IGUAL ID
Rule 30    createDB_unParam -> MODE ENTERO
Rule 31    createDB_unParam -> MODE IGUAL ENTERO
Rule 32    createDB_insrt -> CREATE DATABASE ID createDB_dosParam PTCOMA
Rule 33    createDB_insrt -> CREATE OR REPLACE DATABASE ID createDB_dosParam PTCOMA
Rule 34    createDB_insrt -> CREATE DATABASE IF NOT EXISTS ID createDB_dosParam PTCOMA
Rule 35    createDB_insrt -> CREATE OR REPLACE DATABASE IF NOT EXISTS ID createDB_dosParam PTCOMA
Rule 36    createDB_dosParam -> OWNER ID MODE ENTERO
Rule 37    createDB_dosParam -> OWNER ID MODE IGUAL ENTERO
Rule 38    createDB_dosParam -> OWNER IGUAL ID MODE ENTERO
Rule 39    createDB_dosParam -> OWNER IGUAL ID MODE IGUAL ENTERO
Rule 40    createDB_dosParam -> MODE ENTERO OWNER ID
Rule 41    createDB_dosParam -> MODE ENTERO OWNER IGUAL ID
Rule 42    createDB_dosParam -> MODE IGUAL ENTERO OWNER ID
Rule 43    createDB_dosParam -> MODE IGUAL ENTERO OWNER IGUAL ID
Rule 44    constraint_esp -> CHECK PAR_A expresion_logica PAR_C
Rule 45    constraint_esp -> UNIQUE PAR_A campos_c PAR_C
Rule 46    constraint_esp -> FOREING KEY PAR_A ID PAR_C REFERENCES ID PAR_A ID PAR_C
Rule 47    campos_c -> campos_c COMA ID
Rule 48    campos_c -> ID
Rule 49    create_Table_isnrt -> CREATE TABLE ID PAR_A cuerpo_createTable_lista PAR_C PTCOMA
Rule 50    create_Table_isnrt -> CREATE TABLE ID PAR_A cuerpo_createTable_lista PAR_C INHERITS PAR_A ID PAR_C PTCOMA
Rule 51    cuerpo_createTable_lista -> cuerpo_createTable_lista COMA cuerpo_createTable
Rule 52    cuerpo_createTable_lista -> cuerpo_createTable
Rule 53    cuerpo_createTable -> ID TIPO_DATO
Rule 54    cuerpo_createTable -> ID TIPO_DATO PRIMARY KEY
Rule 55    cuerpo_createTable -> ID TIPO_DATO REFERENCES ID
Rule 56    cuerpo_createTable -> ID TIPO_DATO NOT NULL
Rule 57    cuerpo_createTable -> ID TIPO_DATO NULL
Rule 58    cuerpo_createTable -> PRIMARY KEY PAR_A ID PAR_C
Rule 59    cuerpo_createTable -> FOREING KEY PAR_A ID PAR_C REFERENCES ID PAR_A ID PAR_C
Rule 60    cuerpo_createTable -> UNIQUE PAR_A campos_c PAR_C
Rule 61    cuerpo_createTable -> CONSTRAINT ID constraint_esp
Rule 62    TIPO_DATO -> TEXT
Rule 63    TIPO_DATO -> FLOAT
Rule 64    TIPO_DATO -> INTEGER
Rule 65    TIPO_DATO -> SMALLINT
Rule 66    TIPO_DATO -> MONEY
Rule 67    TIPO_DATO -> DECIMAL PAR_A ENTERO COMA ENTERO PAR_C
Rule 68    TIPO_DATO -> NUMERIC PAR_A ENTERO COMA ENTERO PAR_C
Rule 69    TIPO_DATO -> BIGINT
Rule 70    TIPO_DATO -> REAL
Rule 71    TIPO_DATO -> DOUBLE PRECISION
Rule 72    TIPO_DATO -> INTERVAL extract_time TO extract_time
Rule 73    TIPO_DATO -> INTERVAL
Rule 74    TIPO_DATO -> TIME
Rule 75    TIPO_DATO -> TIMESTAMP
Rule 76    TIPO_DATO -> DATE
Rule 77    TIPO_DATO -> CHARACTER VARYING PAR_A ENTERO PAR_C
Rule 78    TIPO_DATO -> VARCHAR PAR_A ENTERO PAR_C
Rule 79    TIPO_DATO -> CHAR PAR_A ENTERO PAR_C
Rule 80    TIPO_DATO -> CHARACTER PAR_A ENTERO PAR_C
Rule 81    TIPO_DATO -> CHAR PAR_A PAR_C
Rule 82    TIPO_DATO -> CHARACTER PAR_A PAR_C
Rule 83    extract_time -> YEAR
Rule 84    extract_time -> DAY
Rule 85    extract_time -> MONTH
Rule 86    extract_time -> HOUR
Rule 87    extract_time -> MINUTE
Rule 88    extract_time -> SECOND
Rule 89    agrupacion_expresion -> PAR_A expresion PAR_C
Rule 90    expresion -> CADENA
Rule 91    expresion -> ENTERO
Rule 92    expresion -> FLOTANTE
Rule 93    expresion -> ID
Rule 94    expresion -> ID PUNTO ID
Rule 95    expresion -> expresion SUMA expresion
Rule 96    expresion -> expresion RESTA expresion
Rule 97    expresion -> expresion DIVISION expresion
Rule 98    expresion -> expresion ASTERISCO expresion
Rule 99    expresion -> TRUE
Rule 100   expresion -> FALSE
Rule 101   string_type -> CADENA
Rule 102   string_type -> ID
Rule 103   expresion_relacional -> expresion MAYQUE expresion
Rule 104   expresion_relacional -> expresion MENQUE expresion
Rule 105   expresion_relacional -> expresion MAYIGQUE expresion
Rule 106   expresion_relacional -> expresion MENIGQUE expresion
Rule 107   expresion_relacional -> expresion DOBLEIG expresion
Rule 108   expresion_relacional -> expresion IGUAL expresion
Rule 109   expresion_relacional -> expresion NOIG expresion
Rule 110   expresion_relacional -> expresion NOIGUAL expresion
Rule 111   expresion_relacional -> expresion
Rule 112   expresion_logica -> expresion_relacional AND expresion_relacional
Rule 113   expresion_logica -> expresion_relacional OR expresion_relacional
Rule 114   expresion_logica -> NOT expresion_relacional
Rule 115   expresion_logica -> expresion_relacional

Terminals, with rules where they appear

ABS                  : 
ACOS                 : 
ACOSD                : 
ACOSH                : 
ADD                  : 
ALL                  : 
ALTER                : 10 11
AND                  : 112
ANY                  : 
AS                   : 
ASC                  : 
ASIN                 : 
ASIND                : 
ASINH                : 
ASTERISCO            : 98
ATAN                 : 
ATAN2                : 
ATAN2D               : 
ATAND                : 
ATANH                : 
AVG                  : 
BETWEEN              : 
BIGINT               : 69
BY                   : 
CADENA               : 15 90 101
CASE                 : 
CBRT                 : 
CEIL                 : 
CEILING              : 
CEJILLA              : 
CHAR                 : 79 81
CHARACTER            : 77 80 82
CHECK                : 44
COLUMN               : 
COMA                 : 47 51 67 68
CONSTRAINT           : 61
CONVERT              : 
COS                  : 
COSD                 : 
COSH                 : 
COT                  : 
COTD                 : 
COUNT                : 
CREATE               : 20 21 22 23 24 25 26 27 32 33 34 35 49 50
CURRENT_DATE         : 
CURRENT_TIME         : 
CURRENT_USER         : 13
DATABASE             : 10 11 17 18 20 21 22 23 24 25 26 27 32 33 34 35
DATABASES            : 19
DATE                 : 76
DATE_PART            : 
DAY                  : 84
DECIMAL              : 67
DECODE               : 
DEGREES              : 
DELETE               : 
DESC                 : 
DISTINCT             : 
DIV                  : 
DIVISION             : 97
DOBLEIG              : 107
DOUBLE               : 71
DROP                 : 17 18
D_OR                 : 
ELSE                 : 
ENCODE               : 
END                  : 
ENTERO               : 30 31 36 37 38 39 40 41 42 43 67 67 68 68 77 78 79 80 91
ENUM                 : 
EXCEPT               : 
EXISTS               : 18 22 23 26 27 34 35
EXP                  : 
EXTRACT              : 
FACTORIAL            : 
FALSE                : 100
FLOAT                : 63
FLOOR                : 
FLOTANTE             : 92
FOREIGN              : 
FOREING              : 46 59
FROM                 : 
FULL                 : 
GCD                  : 
GET_BYTE             : 
GROUP                : 
HASHTAG              : 
HAVING               : 
HOUR                 : 86
ID                   : 10 10 11 12 16 17 18 20 21 22 23 24 25 26 27 28 29 32 33 34 35 36 37 38 39 40 41 42 43 46 46 46 47 48 49 50 50 53 54 55 55 56 57 58 59 59 59 61 93 94 94 102
IF                   : 18 22 23 26 27 34 35
IGUAL                : 29 31 37 38 39 39 41 42 43 43 108
IN                   : 
INHERITS             : 50
INNER                : 
INSERT               : 
INTEGER              : 64
INTERSECT            : 
INTERVAL             : 72 73
INTO                 : 
IS                   : 
ISNULL               : 
JOIN                 : 
KEY                  : 46 54 58 59
LCM                  : 
LEFT                 : 
LENGTH               : 
LIKE                 : 
LIMIT                : 
LN                   : 
LOG                  : 
LOG10                : 
MAX                  : 
MAYIGQUE             : 105
MAYMAY               : 
MAYQUE               : 103
MD5                  : 
MENIGQUE             : 106
MENMEN               : 
MENQUE               : 104
MIN                  : 
MINUTE               : 87
MIN_SCALE            : 
MOD                  : 
MODE                 : 30 31 36 37 38 39 40 41 42 43
MODULO               : 
MONEY                : 66
MONTH                : 85
MULTI                : 
NATURAL              : 
NOIG                 : 109
NOIGUAL              : 110
NOT                  : 22 23 26 27 34 35 56 114
NOTNULL              : 
NOW                  : 
NULL                 : 56 57
NUMERIC              : 68
OFFSET               : 
ON                   : 
ONLY                 : 
OR                   : 21 23 25 27 33 35 113
ORDER                : 
OUTER                : 
OWNER                : 11 28 29 36 37 38 39 40 41 42 43
PAR_A                : 44 45 46 46 49 50 50 58 59 59 60 67 68 77 78 79 80 81 82 89
PAR_C                : 44 45 46 46 49 50 50 58 59 59 60 67 68 77 78 79 80 81 82 89
PI                   : 
POWER                : 
PRECISION            : 71
PRIMARY              : 54 58
PTCOMA               : 10 11 16 17 18 19 20 21 22 23 24 25 26 27 32 33 34 35 49 50
PUNTO                : 94
RADIANS              : 
RANDOM               : 
REAL                 : 70
REFERENCES           : 46 55 59
RENAME               : 10
REPLACE              : 21 23 25 27 33 35
RESTA                : 96
RETURNING            : 
RIGHT                : 
ROUND                : 
SCALE                : 
SECOND               : 88
SELECT               : 
SESSION_USER         : 14
SET                  : 
SETSEED              : 
SET_BYTE             : 
SHA256               : 
SHOW                 : 19
SIGN                 : 
SIN                  : 
SIND                 : 
SINH                 : 
SMALLINT             : 65
SOME                 : 
SQRT                 : 
SUBSTR               : 
SUBSTRING            : 
SUM                  : 
SUMA                 : 95
SYMMETRIC            : 
S_OR                 : 
TABLE                : 49 50
TAN                  : 
TAND                 : 
TANH                 : 
TEXT                 : 62
THEN                 : 
TIME                 : 74
TIMESTAMP            : 75
TO                   : 10 11 72
TRIM                 : 
TRIM_SCALE           : 
TRUC                 : 
TRUE                 : 99
TYPE                 : 
UNION                : 
UNIQUE               : 45 60
UNKNOWN              : 
UPDATE               : 
USE                  : 16
USING                : 
VALUES               : 
VARCHAR              : 78
VARYING              : 77
WHEN                 : 
WHERE                : 
WIDTH_BUCKET         : 
Y                    : 
YEAR                 : 83
error                : 

Nonterminals, with rules where they appear

TIPO_DATO            : 53 54 55 56 57
agrupacion_expresion : 
alterDB_insrt        : 9
campos_c             : 45 47 60
constraint_esp       : 61
createDB_dosParam    : 32 33 34 35
createDB_insrt       : 4
createDB_unParam     : 24 25 26 27
create_Table_isnrt   : 5
cuerpo_createTable   : 51 52
cuerpo_createTable_lista : 49 50 51
drop_database_instr  : 7
expresion            : 89 95 95 96 96 97 97 98 98 103 103 104 104 105 105 106 106 107 107 108 108 109 109 110 110 111
expresion_logica     : 44
expresion_relacional : 112 112 113 113 114 115
extract_time         : 72 72
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2
show_databases_instr : 6
string_type          : 
use_database_instr   : 8
usuariosDB           : 11

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . createDB_insrt
    (5) instruccion -> . create_Table_isnrt
    (6) instruccion -> . show_databases_instr
    (7) instruccion -> . drop_database_instr
    (8) instruccion -> . use_database_instr
    (9) instruccion -> . alterDB_insrt
    (20) createDB_insrt -> . CREATE DATABASE ID PTCOMA
    (21) createDB_insrt -> . CREATE OR REPLACE DATABASE ID PTCOMA
    (22) createDB_insrt -> . CREATE DATABASE IF NOT EXISTS ID PTCOMA
    (23) createDB_insrt -> . CREATE OR REPLACE DATABASE IF NOT EXISTS ID PTCOMA
    (24) createDB_insrt -> . CREATE DATABASE ID createDB_unParam PTCOMA
    (25) createDB_insrt -> . CREATE OR REPLACE DATABASE ID createDB_unParam PTCOMA
    (26) createDB_insrt -> . CREATE DATABASE IF NOT EXISTS ID createDB_unParam PTCOMA
    (27) createDB_insrt -> . CREATE OR REPLACE DATABASE IF NOT EXISTS ID createDB_unParam PTCOMA
    (32) createDB_insrt -> . CREATE DATABASE ID createDB_dosParam PTCOMA
    (33) createDB_insrt -> . CREATE OR REPLACE DATABASE ID createDB_dosParam PTCOMA
    (34) createDB_insrt -> . CREATE DATABASE IF NOT EXISTS ID createDB_dosParam PTCOMA
    (35) createDB_insrt -> . CREATE OR REPLACE DATABASE IF NOT EXISTS ID createDB_dosParam PTCOMA
    (49) create_Table_isnrt -> . CREATE TABLE ID PAR_A cuerpo_createTable_lista PAR_C PTCOMA
    (50) create_Table_isnrt -> . CREATE TABLE ID PAR_A cuerpo_createTable_lista PAR_C INHERITS PAR_A ID PAR_C PTCOMA
    (19) show_databases_instr -> . SHOW DATABASES PTCOMA
    (17) drop_database_instr -> . DROP DATABASE ID PTCOMA
    (18) drop_database_instr -> . DROP DATABASE IF EXISTS ID PTCOMA
    (16) use_database_instr -> . USE ID PTCOMA
    (10) alterDB_insrt -> . ALTER DATABASE ID RENAME TO ID PTCOMA
    (11) alterDB_insrt -> . ALTER DATABASE ID OWNER TO usuariosDB PTCOMA

    CREATE          shift and go to state 10
    SHOW            shift and go to state 11
    DROP            shift and go to state 12
    USE             shift and go to state 13
    ALTER           shift and go to state 14

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    createDB_insrt                 shift and go to state 4
    create_Table_isnrt             shift and go to state 5
    show_databases_instr           shift and go to state 6
    drop_database_instr            shift and go to state 7
    use_database_instr             shift and go to state 8
    alterDB_insrt                  shift and go to state 9

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . createDB_insrt
    (5) instruccion -> . create_Table_isnrt
    (6) instruccion -> . show_databases_instr
    (7) instruccion -> . drop_database_instr
    (8) instruccion -> . use_database_instr
    (9) instruccion -> . alterDB_insrt
    (20) createDB_insrt -> . CREATE DATABASE ID PTCOMA
    (21) createDB_insrt -> . CREATE OR REPLACE DATABASE ID PTCOMA
    (22) createDB_insrt -> . CREATE DATABASE IF NOT EXISTS ID PTCOMA
    (23) createDB_insrt -> . CREATE OR REPLACE DATABASE IF NOT EXISTS ID PTCOMA
    (24) createDB_insrt -> . CREATE DATABASE ID createDB_unParam PTCOMA
    (25) createDB_insrt -> . CREATE OR REPLACE DATABASE ID createDB_unParam PTCOMA
    (26) createDB_insrt -> . CREATE DATABASE IF NOT EXISTS ID createDB_unParam PTCOMA
    (27) createDB_insrt -> . CREATE OR REPLACE DATABASE IF NOT EXISTS ID createDB_unParam PTCOMA
    (32) createDB_insrt -> . CREATE DATABASE ID createDB_dosParam PTCOMA
    (33) createDB_insrt -> . CREATE OR REPLACE DATABASE ID createDB_dosParam PTCOMA
    (34) createDB_insrt -> . CREATE DATABASE IF NOT EXISTS ID createDB_dosParam PTCOMA
    (35) createDB_insrt -> . CREATE OR REPLACE DATABASE IF NOT EXISTS ID createDB_dosParam PTCOMA
    (49) create_Table_isnrt -> . CREATE TABLE ID PAR_A cuerpo_createTable_lista PAR_C PTCOMA
    (50) create_Table_isnrt -> . CREATE TABLE ID PAR_A cuerpo_createTable_lista PAR_C INHERITS PAR_A ID PAR_C PTCOMA
    (19) show_databases_instr -> . SHOW DATABASES PTCOMA
    (17) drop_database_instr -> . DROP DATABASE ID PTCOMA
    (18) drop_database_instr -> . DROP DATABASE IF EXISTS ID PTCOMA
    (16) use_database_instr -> . USE ID PTCOMA
    (10) alterDB_insrt -> . ALTER DATABASE ID RENAME TO ID PTCOMA
    (11) alterDB_insrt -> . ALTER DATABASE ID OWNER TO usuariosDB PTCOMA

    $end            reduce using rule 1 (init -> instrucciones .)
    CREATE          shift and go to state 10
    SHOW            shift and go to state 11
    DROP            shift and go to state 12
    USE             shift and go to state 13
    ALTER           shift and go to state 14

    instruccion                    shift and go to state 15
    createDB_insrt                 shift and go to state 4
    create_Table_isnrt             shift and go to state 5
    show_databases_instr           shift and go to state 6
    drop_database_instr            shift and go to state 7
    use_database_instr             shift and go to state 8
    alterDB_insrt                  shift and go to state 9

state 3

    (3) instrucciones -> instruccion .

    CREATE          reduce using rule 3 (instrucciones -> instruccion .)
    SHOW            reduce using rule 3 (instrucciones -> instruccion .)
    DROP            reduce using rule 3 (instrucciones -> instruccion .)
    USE             reduce using rule 3 (instrucciones -> instruccion .)
    ALTER           reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> createDB_insrt .

    CREATE          reduce using rule 4 (instruccion -> createDB_insrt .)
    SHOW            reduce using rule 4 (instruccion -> createDB_insrt .)
    DROP            reduce using rule 4 (instruccion -> createDB_insrt .)
    USE             reduce using rule 4 (instruccion -> createDB_insrt .)
    ALTER           reduce using rule 4 (instruccion -> createDB_insrt .)
    $end            reduce using rule 4 (instruccion -> createDB_insrt .)


state 5

    (5) instruccion -> create_Table_isnrt .

    CREATE          reduce using rule 5 (instruccion -> create_Table_isnrt .)
    SHOW            reduce using rule 5 (instruccion -> create_Table_isnrt .)
    DROP            reduce using rule 5 (instruccion -> create_Table_isnrt .)
    USE             reduce using rule 5 (instruccion -> create_Table_isnrt .)
    ALTER           reduce using rule 5 (instruccion -> create_Table_isnrt .)
    $end            reduce using rule 5 (instruccion -> create_Table_isnrt .)


state 6

    (6) instruccion -> show_databases_instr .

    CREATE          reduce using rule 6 (instruccion -> show_databases_instr .)
    SHOW            reduce using rule 6 (instruccion -> show_databases_instr .)
    DROP            reduce using rule 6 (instruccion -> show_databases_instr .)
    USE             reduce using rule 6 (instruccion -> show_databases_instr .)
    ALTER           reduce using rule 6 (instruccion -> show_databases_instr .)
    $end            reduce using rule 6 (instruccion -> show_databases_instr .)


state 7

    (7) instruccion -> drop_database_instr .

    CREATE          reduce using rule 7 (instruccion -> drop_database_instr .)
    SHOW            reduce using rule 7 (instruccion -> drop_database_instr .)
    DROP            reduce using rule 7 (instruccion -> drop_database_instr .)
    USE             reduce using rule 7 (instruccion -> drop_database_instr .)
    ALTER           reduce using rule 7 (instruccion -> drop_database_instr .)
    $end            reduce using rule 7 (instruccion -> drop_database_instr .)


state 8

    (8) instruccion -> use_database_instr .

    CREATE          reduce using rule 8 (instruccion -> use_database_instr .)
    SHOW            reduce using rule 8 (instruccion -> use_database_instr .)
    DROP            reduce using rule 8 (instruccion -> use_database_instr .)
    USE             reduce using rule 8 (instruccion -> use_database_instr .)
    ALTER           reduce using rule 8 (instruccion -> use_database_instr .)
    $end            reduce using rule 8 (instruccion -> use_database_instr .)


state 9

    (9) instruccion -> alterDB_insrt .

    CREATE          reduce using rule 9 (instruccion -> alterDB_insrt .)
    SHOW            reduce using rule 9 (instruccion -> alterDB_insrt .)
    DROP            reduce using rule 9 (instruccion -> alterDB_insrt .)
    USE             reduce using rule 9 (instruccion -> alterDB_insrt .)
    ALTER           reduce using rule 9 (instruccion -> alterDB_insrt .)
    $end            reduce using rule 9 (instruccion -> alterDB_insrt .)


state 10

    (20) createDB_insrt -> CREATE . DATABASE ID PTCOMA
    (21) createDB_insrt -> CREATE . OR REPLACE DATABASE ID PTCOMA
    (22) createDB_insrt -> CREATE . DATABASE IF NOT EXISTS ID PTCOMA
    (23) createDB_insrt -> CREATE . OR REPLACE DATABASE IF NOT EXISTS ID PTCOMA
    (24) createDB_insrt -> CREATE . DATABASE ID createDB_unParam PTCOMA
    (25) createDB_insrt -> CREATE . OR REPLACE DATABASE ID createDB_unParam PTCOMA
    (26) createDB_insrt -> CREATE . DATABASE IF NOT EXISTS ID createDB_unParam PTCOMA
    (27) createDB_insrt -> CREATE . OR REPLACE DATABASE IF NOT EXISTS ID createDB_unParam PTCOMA
    (32) createDB_insrt -> CREATE . DATABASE ID createDB_dosParam PTCOMA
    (33) createDB_insrt -> CREATE . OR REPLACE DATABASE ID createDB_dosParam PTCOMA
    (34) createDB_insrt -> CREATE . DATABASE IF NOT EXISTS ID createDB_dosParam PTCOMA
    (35) createDB_insrt -> CREATE . OR REPLACE DATABASE IF NOT EXISTS ID createDB_dosParam PTCOMA
    (49) create_Table_isnrt -> CREATE . TABLE ID PAR_A cuerpo_createTable_lista PAR_C PTCOMA
    (50) create_Table_isnrt -> CREATE . TABLE ID PAR_A cuerpo_createTable_lista PAR_C INHERITS PAR_A ID PAR_C PTCOMA

    DATABASE        shift and go to state 16
    OR              shift and go to state 17
    TABLE           shift and go to state 18


state 11

    (19) show_databases_instr -> SHOW . DATABASES PTCOMA

    DATABASES       shift and go to state 19


state 12

    (17) drop_database_instr -> DROP . DATABASE ID PTCOMA
    (18) drop_database_instr -> DROP . DATABASE IF EXISTS ID PTCOMA

    DATABASE        shift and go to state 20


state 13

    (16) use_database_instr -> USE . ID PTCOMA

    ID              shift and go to state 21


state 14

    (10) alterDB_insrt -> ALTER . DATABASE ID RENAME TO ID PTCOMA
    (11) alterDB_insrt -> ALTER . DATABASE ID OWNER TO usuariosDB PTCOMA

    DATABASE        shift and go to state 22


state 15

    (2) instrucciones -> instrucciones instruccion .

    CREATE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    SHOW            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    DROP            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    USE             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ALTER           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 16

    (20) createDB_insrt -> CREATE DATABASE . ID PTCOMA
    (22) createDB_insrt -> CREATE DATABASE . IF NOT EXISTS ID PTCOMA
    (24) createDB_insrt -> CREATE DATABASE . ID createDB_unParam PTCOMA
    (26) createDB_insrt -> CREATE DATABASE . IF NOT EXISTS ID createDB_unParam PTCOMA
    (32) createDB_insrt -> CREATE DATABASE . ID createDB_dosParam PTCOMA
    (34) createDB_insrt -> CREATE DATABASE . IF NOT EXISTS ID createDB_dosParam PTCOMA

    ID              shift and go to state 23
    IF              shift and go to state 24


state 17

    (21) createDB_insrt -> CREATE OR . REPLACE DATABASE ID PTCOMA
    (23) createDB_insrt -> CREATE OR . REPLACE DATABASE IF NOT EXISTS ID PTCOMA
    (25) createDB_insrt -> CREATE OR . REPLACE DATABASE ID createDB_unParam PTCOMA
    (27) createDB_insrt -> CREATE OR . REPLACE DATABASE IF NOT EXISTS ID createDB_unParam PTCOMA
    (33) createDB_insrt -> CREATE OR . REPLACE DATABASE ID createDB_dosParam PTCOMA
    (35) createDB_insrt -> CREATE OR . REPLACE DATABASE IF NOT EXISTS ID createDB_dosParam PTCOMA

    REPLACE         shift and go to state 25


state 18

    (49) create_Table_isnrt -> CREATE TABLE . ID PAR_A cuerpo_createTable_lista PAR_C PTCOMA
    (50) create_Table_isnrt -> CREATE TABLE . ID PAR_A cuerpo_createTable_lista PAR_C INHERITS PAR_A ID PAR_C PTCOMA

    ID              shift and go to state 26


state 19

    (19) show_databases_instr -> SHOW DATABASES . PTCOMA

    PTCOMA          shift and go to state 27


state 20

    (17) drop_database_instr -> DROP DATABASE . ID PTCOMA
    (18) drop_database_instr -> DROP DATABASE . IF EXISTS ID PTCOMA

    ID              shift and go to state 28
    IF              shift and go to state 29


state 21

    (16) use_database_instr -> USE ID . PTCOMA

    PTCOMA          shift and go to state 30


state 22

    (10) alterDB_insrt -> ALTER DATABASE . ID RENAME TO ID PTCOMA
    (11) alterDB_insrt -> ALTER DATABASE . ID OWNER TO usuariosDB PTCOMA

    ID              shift and go to state 31


state 23

    (20) createDB_insrt -> CREATE DATABASE ID . PTCOMA
    (24) createDB_insrt -> CREATE DATABASE ID . createDB_unParam PTCOMA
    (32) createDB_insrt -> CREATE DATABASE ID . createDB_dosParam PTCOMA
    (28) createDB_unParam -> . OWNER ID
    (29) createDB_unParam -> . OWNER IGUAL ID
    (30) createDB_unParam -> . MODE ENTERO
    (31) createDB_unParam -> . MODE IGUAL ENTERO
    (36) createDB_dosParam -> . OWNER ID MODE ENTERO
    (37) createDB_dosParam -> . OWNER ID MODE IGUAL ENTERO
    (38) createDB_dosParam -> . OWNER IGUAL ID MODE ENTERO
    (39) createDB_dosParam -> . OWNER IGUAL ID MODE IGUAL ENTERO
    (40) createDB_dosParam -> . MODE ENTERO OWNER ID
    (41) createDB_dosParam -> . MODE ENTERO OWNER IGUAL ID
    (42) createDB_dosParam -> . MODE IGUAL ENTERO OWNER ID
    (43) createDB_dosParam -> . MODE IGUAL ENTERO OWNER IGUAL ID

    PTCOMA          shift and go to state 32
    OWNER           shift and go to state 35
    MODE            shift and go to state 36

    createDB_unParam               shift and go to state 33
    createDB_dosParam              shift and go to state 34

state 24

    (22) createDB_insrt -> CREATE DATABASE IF . NOT EXISTS ID PTCOMA
    (26) createDB_insrt -> CREATE DATABASE IF . NOT EXISTS ID createDB_unParam PTCOMA
    (34) createDB_insrt -> CREATE DATABASE IF . NOT EXISTS ID createDB_dosParam PTCOMA

    NOT             shift and go to state 37


state 25

    (21) createDB_insrt -> CREATE OR REPLACE . DATABASE ID PTCOMA
    (23) createDB_insrt -> CREATE OR REPLACE . DATABASE IF NOT EXISTS ID PTCOMA
    (25) createDB_insrt -> CREATE OR REPLACE . DATABASE ID createDB_unParam PTCOMA
    (27) createDB_insrt -> CREATE OR REPLACE . DATABASE IF NOT EXISTS ID createDB_unParam PTCOMA
    (33) createDB_insrt -> CREATE OR REPLACE . DATABASE ID createDB_dosParam PTCOMA
    (35) createDB_insrt -> CREATE OR REPLACE . DATABASE IF NOT EXISTS ID createDB_dosParam PTCOMA

    DATABASE        shift and go to state 38


state 26
